@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.80 2009-04-02 23:28:15 nicm Exp $
+# $Id: GNUmakefile,v 1.81 2009-04-03 17:21:46 nicm Exp $
 
 .PHONY: clean
 
@@ -38,6 +38,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-up-pane.c cmd-down-pane.c cmd-choose-window.c cmd-choose-session.c \
       cmd-suspend-client.c cmd-find-window.c cmd-load-buffer.c \
       cmd-copy-buffer.c cmd-break-pane.c cmd-swap-pane.c cmd-next-layout.c \
+      cmd-rotate-window.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
       window-choose.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
