@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.88 2009-04-02 23:28:16 nicm Exp $ */
+/* $Id: cmd.c,v 1.89 2009-04-03 17:21:46 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -66,7 +66,8 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_rename_window_entry,
 	&cmd_resize_pane_down_entry,
 	&cmd_resize_pane_up_entry,
-	&cmd_respawn_window_entry,
+	&cmd_respawn_window_entry,	
+	&cmd_rotate_window_entry,
 	&cmd_save_buffer_entry,
 	&cmd_scroll_mode_entry,
 	&cmd_select_pane_entry,
